--- a/src/server/pages/index.ejs
+++ b/src/server/pages/index.ejs
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="/assets/client.css" rel="stylesheet">
-  <title>Youtoop Guide</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href="/assets/client.css" rel="stylesheet">
+    <title>Youtoop Guide</title>
+  </head>
 
-<body>
-  <header>
-    <nav class="blue" role="navigation">
-      <div class="nav-wrapper container">
-        <a id="logo-container" href="/" class="brand-logo">Youtoop Guide</a>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <div class="section no-pad-bot" id="index-banner">
-      <div class="container">
-        <div class="row">
-          <div class="search-wrapper col s12">
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="searchTxt" name="searchTxt" class="materialize-textarea" placeholder="Search" value="<%=rawKeywords%>" />
-                <span class="helper-text left" data-error="wrong" data-success="right">กด Enter แล้วรอแป๊บนึง</span>
+  <body>
+    <header>
+      <nav class="blue" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="/" class="brand-logo">Youtoop Guide</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+          <div class="row">
+            <div class="search-wrapper col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="searchTxt" name="searchTxt"
+                    class="materialize-textarea" placeholder="Search" value="<%=rawKeywords%>"
+                  />
+                  <span class="helper-text left" data-error="wrong"
+                    data-success="right">กด Enter แล้วรอแป๊บนึง</span>
+                </div>
               </div>
             </div>
           </div>
+          <div class="row">
+            <span id="keywordSpan"></span>
+            <div id="resultPanel"></div>
+          </div>
         </div>
+      </div>
+    </main>
+    <footer class="page-footer blue-grey lighten-1">
+      <div class="container">
         <div class="row">
-          <span id="keywordSpan"></span>
-          <div id="resultPanel"></div>
+          <div class="col s12">
+            <p class="grey-text text-lighten-4">ยูธูปไกด์ <a class="grey-text text-lighten-3"
+                href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a></p>
+            <p class="right"><a class="grey-text text-lighten-3"
+                href="https://github.com/wiennat/youtoop-guide">Github</a></p>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer class="page-footer blue-grey lighten-1">
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <p class="grey-text text-lighten-4">ยูธูปไกด์ <a href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a>
-            <a class="grey-text text-lighten-4 right" href="https://github.com/wiennat/youtoop-guide"></a>Github</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <script type="text/javascript">
-    var initStories = <%- JSON.stringify(stories) %>;
+    </footer>
+    <script type="text/javascript">
+    var initStories = <%-
+        JSON.stringify(stories) %>;
 
-  </script>
-  <script src="/assets/client.js"></script>
-</body>
+      </script>
+      <script src="/assets/client.js"></script>
+    </body>
 
-</html>
+  </html>
