--- a/src/server/pages/index.ejs
+++ b/src/server/pages/index.ejs
@@ -47,8 +47,8 @@
         <div class="row">
           <div class="col s12">
             <p class="grey-text text-lighten-4">ยูธูปไกด์ <a class="grey-text text-lighten-3"
-                href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a></p>
-            <p class="right"><a class="grey-text text-lighten-3"
+                href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a>
+            <a class="grey-text text-lighten-3 right"
                 href="https://github.com/wiennat/youtoop-guide">Github</a></p>
           </div>
         </div>
