--- a/src/server/pages/index.ejs
+++ b/src/server/pages/index.ejs
@@ -55,8 +55,7 @@
       </div>
     </footer>
     <script type="text/javascript">
-    var initStories = <%-
-        JSON.stringify(stories) %>;
+    var initStories = <%- JSON.stringify(stories) %>;
 
       </script>
       <script src="/assets/client.js"></script>
