--- a/src/server/pages/index.ejs
+++ b/src/server/pages/index.ejs
@@ -1,72 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link href="/assets/client.css" rel="stylesheet">
-    <title>Youtoop Guide</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="/assets/client.css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="ie=edge" http-equiv="X-UA-Compatible">
+  <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/site.webmanifest" rel="manifest">
+  <link color="#5bbad5" href="/safari-pinned-tab.svg" rel="mask-icon">
+  <meta content="#00aba9" name="msapplication-TileColor">
+  <meta content="#ffffff" name="theme-color">
+  <title>Youtoop Guide</title>
+</head>
 
-  <body>
-    <header>
-      <nav class="blue" role="navigation">
-        <div class="nav-wrapper container">
-          <a id="logo-container" href="/" class="brand-logo">Youtoop Guide</a>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
-          <div class="row">
-            <div class="search-wrapper col s12">
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="searchTxt" name="searchTxt"
-                    class="materialize-textarea" placeholder="Search" value="<%=rawKeywords%>"
-                  />
-                  <span class="helper-text left" data-error="wrong"
-                    data-success="right">กด Enter แล้วรอแป๊บนึง</span>
-                </div>
+<body>
+  <header>
+    <nav class="blue" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="/" class="brand-logo">Youtoop Guide</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <div class="row">
+          <div class="search-wrapper col s12">
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="searchTxt" name="searchTxt" class="materialize-textarea" placeholder="Search" value="<%=rawKeywords%>" />
+                <span class="helper-text left" data-error="wrong" data-success="right">กด Enter แล้วรอแป๊บนึง</span>
               </div>
             </div>
           </div>
-          <div class="row">
-            <span id="keywordSpan"></span>
-            <div id="resultPanel"></div>
-          </div>
         </div>
-      </div>
-    </main>
-    <footer class="page-footer blue-grey lighten-1">
-      <div class="container">
         <div class="row">
-          <div class="col s12">
-            <p class="grey-text text-lighten-4">ยูธูปไกด์ <a class="grey-text text-lighten-3"
-                href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a>
-            <a class="grey-text text-lighten-3 right"
-                href="https://github.com/wiennat/youtoop-guide">Github</a></p>
-          </div>
+          <span id="keywordSpan"></span>
+          <div id="resultPanel"></div>
         </div>
       </div>
-    </footer>
-    <script type="text/javascript">
+    </div>
+  </main>
+  <footer class="page-footer blue-grey lighten-1">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <p class="grey-text text-lighten-4">ยูธูปไกด์ <a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1zNylfIA5Jy9p3HYJ38QHC2FfvJ7bn3Bb8NRf3dJhmIc/edit?usp=sharing">ข้อมูลโดยคุณเส็ง</a>
+            <a class="grey-text text-lighten-3 right" href="https://github.com/wiennat/youtoop-guide">Github</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script type="text/javascript">
     var initStories = <%- JSON.stringify(stories) %>;
 
-    </script>
-    <script src="/assets/client.js"></script>
-    <% if (analytics.enabled) { %>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= analytics.code %>"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', '<%= analytics.code %>');
-	</script>
-    <% } %>
-    </body>
-  </html>
+  </script>
+  <script src="/assets/client.js"></script>
+  <% if (analytics.enabled) { %>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=<%= analytics.code %>"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', '<%= analytics.code %>');
+
+  </script>
+  <% } %>
+</body>
+
+</html>
