make header smaller for small device

--- a/src/client/main.css
+++ b/src/client/main.css
@@ -11,3 +11,9 @@ main {
 .recommended {
   background: #ffee58;
 }
+
+@media only screen and (max-width: 600px) {
+  nav .brand-logo {
+    font-size: 1.8rem;
+  }
+}
